# minho_team_tools

./: .gitignore  CMakeLists.txt  README.md  package.xml
control_calib/include/: mainwindow.h
control_calib/src/: control_calib.ui  main.cpp  mainwindow.cpp
minho_teleop/: README.md
minho_teleop/include/: mainwindow.h
minho_teleop/src/: main.cpp  mainwindow.cpp  teleop.ui
minhomapgen/: CMakeLists.txt
minhomapgen/config/: Lar.view
minhomapgen/include/: mainwindow.h
minhomapgen/src/: mainwindow.cpp  mainwindow.ui
mini_basestation/: README.md
mini_basestation/config/: rs.qrc
mini_basestation/config/data/: campo-lar.txt  campo-oficial.txt
mini_basestation/include/: ball.h  mainwindow.h  multicastpp.h  robo.h  velocityvector.h
mini_basestation/src/: ball.cpp  main.cpp  mainwindow.cpp  minibs.ui  multicastpp.cpp  robo.cpp  velocityvector.cpp
tools/minho_teleop/src/: main.cpp  mainwindow.cpp
vision_calib/: README.md
vision_calib/include/: imagecalibrator.h  mainwindow.h  types.h
vision_calib/src/: imagecalibrator.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  vision_calib.ui
visualizer/: README.md
visualizer/config/: Official.view
visualizer/include/: types.h  visualizer.h
visualizer/src/: main.cpp  visualizer.cpp
